<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.FoodSell">

    <View
        android:id="@+id/act_f_s_top_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#047BD5"
        app:layout_constraintBottom_toTopOf="@+id/act_f_s_view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

   <TextView
       android:id="@+id/act_f_s_textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_margin="36dp"
       android:layout_marginVertical="24dp"
       android:layout_marginStart="16dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="16dp"
       android:elevation="2dp"
       android:text="@string/sell"
       android:fontFamily="@font/almendra_bold"
       android:textColor="#FFF"
       android:textSize="30sp"
       android:textStyle="bold"

       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0" />


    <View
        android:id="@+id/act_f_s_view3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/ic_wave_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_top_view"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_f_s_foodname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_view3"
        tools:ignore="MissingConstraints,NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:padding="12dp"
            android:id="@+id/act_f_s_foodnamename"
            android:inputType="textPersonName"
            android:backgroundTint="@color/primaryTextColor"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:hint="@string/food_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_f_s_foodweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/act_f_s_foodname"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodname"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:padding="12dp"
            android:id="@+id/act_f_s_foodweightname"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:backgroundTint="@color/primaryTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_weight" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_f_s_foodprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/act_f_s_foodweight"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodweight"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:padding="12dp"
            android:id="@+id/act_f_s_foodpricename"
            android:inputType="number"
            android:maxLines="1"
            android:backgroundTint="@color/primaryTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_f_s_totalfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/act_f_s_foodprice"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodprice"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:padding="12dp"
            android:id="@+id/act_f_s_total_foodname"
            android:inputType="number"
            android:maxLines="1"
            android:backgroundTint="@color/primaryTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num_of_food_order" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/act_f_s_foodallinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/act_f_s_totalfood"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_totalfood"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/act_f_s_foodallinfoname"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryTextColor"
            android:hint="@string/finfo"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/act_f_s_fooddatename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_edittext"
        android:fontFamily="@font/adamina"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/fdate"
        android:textColor="#047BD5"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/act_f_s_totalfood"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodallinfo" />

   <Button
       android:id="@+id/act_f_s_foodtimename"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginEnd="24dp"
       android:background="@drawable/border_edittext"
       android:paddingStart="20dp"
       android:paddingEnd="20dp"
       android:text="@string/food_time"
       android:fontFamily="@font/adamina"
       android:textColor="#047BD5"
       android:textSize="15sp"
       app:layout_constraintEnd_toStartOf="@+id/act_f_s_fooddatename"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/act_f_s_foodallinfo"
       app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodallinfo" />

    <Button
        android:id="@+id/act_f_s_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/sumit_button"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodtimename" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="-40dp"
        android:src="@drawable/swberry"
        android:rotation="150"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act_f_s_submit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/dsec" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginEnd="110dp"
        android:src="@drawable/apple1"
        app:layout_constraintEnd_toStartOf="@+id/act_f_s_textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/dsec" />


</androidx.constraintlayout.widget.ConstraintLayout>