<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBkColor"
    tools:context=".activitys.Signinact">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="@string/dsec" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="120dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">



                <androidx.cardview.widget.CardView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:cardCornerRadius="20dp"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/whiteCardColor">



                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:padding="20dp">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textColor="@color/primaryTextColor"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="22sp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/register"
                            android:layout_marginTop="20dp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signuser"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/primaryTextColor"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signemail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/primaryTextColor"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/primaryTextColor"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signuseraddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/primaryTextColor"
                                android:hint="@string/address"
                                android:inputType="text"
                                android:maxLines="2"
                                android:textSize="12sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/signsignbutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="30dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/login_button_bk"
                            android:text="@string/register"
                            android:textColor="@color/whiteTextColor"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-40dp">

                            <TextView
                                android:id="@+id/tv6"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_centerInParent="true"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/primaryTextColor"
                                android:text="@string/signup_login_hint"
                                android:layout_marginTop="20dp"
                                />


                            <TextView
                                android:id="@+id/signlogtext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_horizontal"
                                android:layout_toEndOf="@+id/tv6"
                                android:padding="8dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="1dp"
                                android:text="@string/signup"
                                android:textColor="@color/colorPrimaryDark"
                                android:textStyle="bold" />


                        </RelativeLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>



    </RelativeLayout>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/login_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/dsec" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/login_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/dsec" />

</androidx.constraintlayout.widget.ConstraintLayout>